traces/bug_553.txt
examples++-load/freeyams.cpp:616: error: DEAD_STORE
  The value written to &nbe (type int) is never used.
Showing all 1 steps of the trace


examples++-load/freeyams.cpp:616:3: Write of unused value
614.     int nv=Th3.nv;
615.     int nt=Th3.nt;
616.     int nbe=Th3.nbe;
         ^
617.   
618.     KN<int> defaultintopt(23);
